<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>body_data</name>
  <version>1.0.0</version>
  <description>
    Custom ROS 2 message definitions for ergonomic body-pose assessment.
    Provides BodyMsg (full RULA assessment output) and MultiCameraPoints
    (3D keypoints from three RealSense depth cameras).
  </description>
  <maintainer email="sshayan1997@gmail.com">shayan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
